cabal-version:       2.4
name:                Stochastic-Simulation
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jacob Skadborg
maintainer:          jskadb20@student.aau.dk

executable stochastic_simulation
  main-is:             Main.hs
  build-depends:       base >=4.13 && <5,
                       random >=1.2 && <1.3,
                       containers >=0.6 && <0.7
  hs-source-dirs:      src
  default-language:    Haskell2010
